fix spacing

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,5 +1,3 @@
-
-
 .page-subnav,
 .pagination-nav {
     width: 100%;
@@ -74,6 +72,7 @@
     text-align: left;
     width: 800px;
     margin: 0 auto;
+    margin-top: 20px;
   }
 
 .styled-table {
